data/derived/comb/progs/unify/prog5207.ml.out
Characters 96-99:
  | l   -> sepConcat (" " (List.map(f, l)));;
                      ^^^
Error: This expression has type string
       This is not a function; it cannot be applied.
